# settled-website-clone

./: .cursorrules  .env.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.client.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo  word-extractor.d.ts
.qa/: launch-audit.spec.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/business/: page.tsx
app/dashboard/: page.tsx
app/disputes/: page.tsx
app/get-started/: page.tsx
app/how-it-works/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/student-loans/: page.tsx
app/support/: page.tsx
components/settled/: certified-mail.tsx  dashboard-actions.tsx  (+26 more)
forensic_core/: README.md  pyproject.toml  vercel.json
forensic_core/api/: index.py
forensic_core/app/: deps.py  main.py  models.py  state.py  violation-libraries.json
forensic_core/app/routers/: audit_routes.py  ops_routes.py
forensic_core/app/services/: audit_engine.py  statutory_archive.py
forensic_core/tests/: test_audit_security.py  test_deterministic_order.py
lib/: db.ts  dispute-cases.ts  engine-client.ts  forensic-intake.ts  gsap.ts  hard-lock.ts  payments.ts  pdf-quality-gate.ts  prisma.ts  public-config.ts  server-config.ts  subscription-plans.ts  titan-log.ts  unified-forensic-orchestrator.ts  use-forensic-operator.ts  violation-libraries.json
prisma/: schema.prisma
scripts/: engine-regression.mjs  render_launch_intro_v3.py  render_launch_intro_videos.py
tests/: frontend-killswitch.test.ts  ingest-route.test.ts
(+31 files in other folders)
