[project]
name = "forensic-core"
version = "0.1.0"
description = "Deterministic sovereign forensic audit API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pytest>=8.3.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8010

